# integrations-python

./: README.md  release.sh
.github/workflows/: lint.yml  python_test.yml  release-langchain.yml
langchain/: README.md  pyproject.toml
langchain/langchain_vectorize/: __init__.py  retrievers.py
langchain/tests/: conftest.py  test_langchain_integration_tests.py  test_retrievers.py
notebooks/: langchain_retriever.ipynb
